--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-image-gallery": "^1.3.0",
     "react-router-dom": "^6.22.0"
   },
   "devDependencies": {
@@ -22,7 +23,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "vite": "^5.1.0",
-    "vite-plugin-react-svg": "^0.2.0"
+    "vite": "^5.1.1",
+    "vite-plugin-react-svg": "^0.1.0"
   }
 }
